Removing the sort fields and fixing the search ones